objects/Location__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>This field indicates the city</description>
    <label>City</label>
    <length>10</length>
    <type>Text</type>
</CustomField>