objects/Location__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Customer</referenceTo>
    <relationshipLabel>Work Locations</relationshipLabel>
    <relationshipName>Work_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>