objects/Location__c/fields/No_of_Managers__c.field-meta.xml
<CustomField>
    <fullName>No_of_Managers__c</fullName>
    <description>No.of Managers reporting to one location</description>
    <inlineHelpText>No.of Managers reporting to one location</inlineHelpText>
    <label>No.of Managers</label>
    <summaryForeignKey>Manager__c.Location__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>