objects/Location__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Any 4 states of India
Any 4 states of US</description>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UTTAR PRADESH</fullName>
            </value>
            <value>
                <fullName>JHARKHAND</fullName>
            </value>
            <value>
                <fullName>BIHAR</fullName>
            </value>
            <value>
                <fullName>HARYANA</fullName>
            </value>
            <value>
                <fullName>HAWAI</fullName>
            </value>
            <value>
                <fullName>GEORGIA</fullName>
            </value>
            <value>
                <fullName>IDAHO</fullName>
            </value>
            <value>
                <fullName>ILLINOIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>