objects/Location__c/fields/Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Zipcode__c</fullName>
    <description>This field indicates the Zipcode</description>
    <label>Zipcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>