objects/Location__c/validationRules/Zipcode_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Zipcode_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(LEN(SUBSTITUTE(Zipcode__c, &apos;-&apos;, &apos;&apos;) )=5)</errorConditionFormula>
    <errorMessage>Zip Code must be in 5-digit format (0-9)</errorMessage>
</ValidationRule>